# NextBusinessDay

./: .coverage  license  main.py  pyproject.toml  readme.md
tests/: test_main.py
