[tool.poetry]
name = "nextbusinessday"
version = "0.1.0"
description = ""
authors = ["mickpah <mpaholski@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
pandas = "^1.5.3"
requests = "^2.28.2"
openpyxl = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

